Tested and made sure the refresh endpoint works as expected
