# src/specs/swagger.json
@@ -54,7 +54,9 @@
     "paths": {
         "/": {
             "get": {
-                "tags": ["index"],
+                "tags": [
+                    "index"
+                ],
                 "summary": "Get an acknowledgment that the server is up and running",
                 "operationId": "indexGet",
                 "responses": {
@@ -66,7 +68,11 @@
         },
         "/authentication/signup": {
             "post": {
-                "tags": ["authentication", "signup", "post"],
+                "tags": [
+                    "authentication",
+                    "signup",
+                    "post"
+                ],
                 "summary": "Create a new account on the platform using an email and a password",
                 "operationId": "authenticationSignupPost",
                 "requestBody": {
@@ -143,7 +149,11 @@
         },
         "/authentication/signin": {
             "post": {
-                "tags": ["authentication", "signin", "post"],
+                "tags": [
+                    "authentication",
+                    "signin",
+                    "post"
+                ],
                 "summary": "Signin to an already existing account on the platform using an email and a password",
                 "operationId": "authenticationSigninPost",
                 "requestBody": {
@@ -213,7 +223,11 @@
         },
         "/authentication/signout": {
             "get": {
-                "tags": ["authentication", "signout", "post"],
+                "tags": [
+                    "authentication",
+                    "signout",
+                    "post"
+                ],
                 "summary": "Signout of an already existing account on the platform using a refreshToken",
                 "operationId": "authenticationSignoutGet",
                 "responses": {
@@ -231,32 +245,21 @@
         },
         "/authentication/refresh": {
             "post": {
-                "tags": ["authentication", "refresh", "post"],
+                "tags": [
+                    "authentication",
+                    "refresh",
+                    "post"
+                ],
                 "summary": "Get a new jwtToken when the old jwtToken is expired or lost using the refreshToken for an existing account on the platform",
                 "operationId": "authenticationRefreshPost",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "email": {
-                                        "type": "string",
-                                        "format": "email"
-                                    },
-                                    "password": {
-                                        "type": "string"
-                                    }
-                                }
-                            },
-                            "example": {
-                                "email": "john@thedoes.com",
-                                "password": "myPassword"
-                            }
-                        }
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "refreshToken",
+                        "type": "string",
+                        "description": "The refreshToken for an existing account on the platform"
                     }
-                },
+                ],
                 "responses": {
                     "401": {
                         "description": "Unauthorized"
